--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,8 @@ edition = "2024"
 vmo2_vm = { path = "lib/vmo2_vm" }
 vmo2_types = { path = "lib/vmo2_types" }
 vmo2_serde = { path = "lib/vmo2_serde" }
+clap = { version = "4.5.35", features = ["derive"] }
+
+[[bin]]
+name = "compiler"
+path = "src/compiler.rs"
