--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,11 @@ path = "src/vmo2.rs"
 [[bin]]
 name = "compiler"
 path = "src/compiler.rs"
+
+[workspace]
+members = [
+    ".",
+    "lib/vmo2_vm",
+    "lib/vmo2_types",
+    "lib/vmo2_serde"
+]
