--- a/lib/vmo2_types/Cargo.toml
+++ b/lib/vmo2_types/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2024"
 [dependencies]
 quickcheck = "1.0.3"
 rand = "0.8.5"
+
+[dev-dependencies]
+quickcheck = "1.0.3"
+quickcheck_macros = "1"
