--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,104 +14,101 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Setup Rust
         uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
           override: true
           components: rustfmt, clippy
-      
+
+      - name: Cargo Check
+        run: cargo check --all --verbose --locked
+
       - name: Check formatting
         run: cargo fmt --check --verbose
-      
+
       - name: Run clippy
-        run: cargo clippy --all --verbose
+        run: cargo clippy --all --verbose --locked
 
   test:
     strategy:
+      fail-fast: true
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        rust: [stable, beta]
-    
+        include:
+          - os: ubuntu-latest
+            rust: stable
+          - os: ubuntu-latest
+            rust: beta
+          - os: macos-latest
+            rust: stable
+          - os: windows-latest
+            rust: stable
+
     runs-on: ${{ matrix.os }}
-    
     steps:
-    - uses: actions/checkout@v4
-    
-    - name: Setup Rust
-      uses: actions-rs/toolchain@v1
-      with:
-        toolchain: ${{ matrix.rust }}
-        override: true
-        components: rustfmt, clippy
-    
-    - name: Cache dependencies
-      uses: actions/cache@v3
-      with:
-        path: |
-          ~/.cargo/bin/
-          ~/.cargo/registry/index/
-          ~/.cargo/registry/cache/
-          ~/.cargo/git/db/
-          target/
-        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-        restore-keys: ${{ runner.os }}-cargo-
-    
-    - name: Build
-      run: cargo build --verbose
-    
-    - name: Run tests
-      run: cargo test --verbose --all
+      - uses: actions/checkout@v4
+
+      - name: Setup Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: ${{ matrix.rust }}
+          override: true
+          components: rustfmt, clippy
+
+      - name: Cache dependencies
+        uses: ./.github/actions/cache-cargo
+
+      - name: Build
+        run: cargo build --verbose --locked
+
+      - name: Run tests
+        run: |
+          cargo test --verbose --all --locked 2>&1 | tee test-output.log
+        continue-on-error: true
+
+      - name: Upload test log on failure
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-log-${{ matrix.os }}-${{ matrix.rust }}
+          path: test-output.log
 
   coverage:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Cache dependencies
-      uses: actions/cache@v3
-      with:
-        path: |
-          ~/.cargo/bin/
-          ~/.cargo/registry/index/
-          ~/.cargo/registry/cache/
-          ~/.cargo/git/db/
-          target/
-        key: ubuntu-latest-cargo-${{ hashFiles('**/Cargo.lock') }}
-        restore-keys: ubuntu-latest-cargo-
+      - name: Cache dependencies
+        uses: ./.github/actions/cache-cargo
 
-    
-    - name: Install cargo-tarpaulin
-      run: cargo install cargo-tarpaulin
-    
-    - name: Generate coverage report
-      run: cargo tarpaulin --verbose --all-features --all --timeout 120 --out Xml
-    
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v5
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }}
+      - name: Install cargo-tarpaulin
+        run: |
+          if ! command -v cargo-tarpaulin &> /dev/null; then
+            cargo install cargo-tarpaulin
+          fi
+
+      - name: Generate coverage report
+        run: cargo tarpaulin --verbose --all-features --all --timeout 120 --out Xml
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
 
   security:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Cache dependencies
-      uses: actions/cache@v3
-      with:
-        path: |
-          ~/.cargo/bin/
-          ~/.cargo/registry/index/
-          ~/.cargo/registry/cache/
-          ~/.cargo/git/db/
-          target/
-        key: ubuntu-latest-cargo-${{ hashFiles('**/Cargo.lock') }}
-        restore-keys: ubuntu-latest-cargo-
+      - name: Cache dependencies
+        uses: ./.github/actions/cache-cargo
 
-    
-    - name: Security audit
-      run: |
-        cargo install cargo-audit
-        cargo audit
+      - name: Install cargo-audit
+        run: |
+          if ! command -v cargo-audit &> /dev/null; then
+            cargo install cargo-audit
+          fi
+
+      - name: Security audit
+        run: cargo audit
